<resources>
    <string name="app_name">SnipIt</string>
    <string name="copy">Copy</string>
    <string name="todo">TODO</string>
    <string name="enable_floating_icon">Enable Floating Icon</string>
    <string name="search">Search</string>
    <string name="searchbar_hint">Search snippets...</string>
    <string name="delete">Delete</string>
    <string name="pin">Pin</string>
    <string name="more">More</string>
    <string name="save_as">Save as</string>
    <string name="share">Share</string>
    <string name="share_as">Share as</string>
    <string name="text">Text</string>
    <string name="json">JSON</string>
    <string name="csv">CSV</string>
    <string name="select_all">Select All</string>
    <string name="export_all">Export All</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="enable_snipit_service">Enable SnipIt Service</string>
    <string name="floating_tray">Floating Tray</string>
    <string name="appearance">Appearance</string>
    <string name="automatic">AUTOMATIC</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="use_device_theme">Use Device Theme</string>
    <string name="tap_the_bubble_to_open_recent_snippets_tray">Tap the bubble to open recent snippets tray</string>
    <string name="clear_clipboard">Clear Clipboard</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="select_tags">Select Tags</string>
    <string name="apply">Apply</string>
    <string name="new_tag_name">New Tag name</string>
    <string name="import_snippets">Import Snippets</string>
    <string name="suggest_cleanup">Suggest cleanup</string>
    <string name="auto_cleanup_snippets">Auto-Cleanup Snippets</string>
    <string name="google_drive">Google Drive</string>
    <string name="snipit_cloud_database">SnipIt Cloud Database</string>
    <string name="choose_cloud_sync_option">Choose Cloud Sync Option</string>
    <string name="cloud_sync">Cloud Sync</string>
    <string name="off">OFF</string>
    <string name="disabled">Disabled</string>
    <string name="choose_appearance">Choose Appearance</string>
    <string name="last_synced_never">Last synced: Never</string>
    <string name="backup_now">Backup Now</string>
    <string name="no_snippets_added_yet_ncopy_one_to_get_started">No snippets added yet.\nCopy one to get started!</string>
    <string name="suggested_actions">Suggested Actions</string>
    <string name="enable_ai_or_regex_based_actions">Enable AI or Regex based actions</string>
    <string name="deleted">Deleted</string>
    <string name="restore">Restore</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="your_bin_is_empty">Your bin is empty</string>
    <string name="app_icon">App Icon</string>
    <string name="str_app_name">App Name</string>
    <string name="app_exclusions">App Exclusions</string>
    <string name="snippets_in_the_recycle_bin_will_be_permanently_deleted_after_30_days">Snippets in the Recycle bin will be permanently deleted after 30 days.</string>
    <string name="empty">Empty</string>
    <string name="restore_all">Restore All</string>
    <string name="time_for_scheduled_backup_everyday">Time for scheduled backup everyday</string>
    <string name="scheduled_time">Scheduled Time:</string>
    <string name="after_you_copy_something_just_tap_on_the_plus_to_capture_your_latest_snippet">After you copy something, just tap on the plus to capture your latest snippet.</string>
    <string name="copy_a_snippet_to_get_started">Copy a Snippet to get started.</string>
</resources>