<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save_as"
        android:title="@string/export_all"
        android:icon="@drawable/publish_24px"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import"
        android:title="@string/import_snippets"
        android:icon="@drawable/place_item_24px"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_suggest_cleanup"
        android:title="@string/suggest_cleanup"
        android:icon="@drawable/mop_24px"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bin"
        android:title="@string/recycle_bin"
        android:icon="@drawable/home_storage_24px"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom" />
</menu>