<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/floatingTrayLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/tray_background"
        android:elevation="8dp"
        android:outlineProvider="background"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tray_top_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="12dp"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="end">

                <ImageView
                    android:id="@+id/btnAdd"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_add_24"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/add" />

                <ImageView
                    android:id="@+id/btnTrayClose"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/round_close_24"
                    android:contentDescription="@string/close" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/trayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:text="@string/after_you_copy_something_just_tap_on_the_plus_to_capture_your_latest_snippet" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trayRecyclerView"
            android:layout_width="330dp"
            android:layout_height="450dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:overScrollMode="always"/>
    </LinearLayout>

    <TextView
        android:id="@+id/emptyTrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:text="@string/copy_a_snippet_to_get_started" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
