<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings"
            app:titleTextColor="?attr/colorOnPrimary"
            app:navigationIcon="@drawable/round_arrow_back_24"
            app:navigationIconTint="?attr/colorOnPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="?android:attr/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/snipitServiceSwitch"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_switch_bg"
                android:checked="true"
                android:padding="18dp"
                android:text="@string/enable_snipit_service"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:textSize="16sp"
                android:textStyle="bold"
                app:thumbIcon="@drawable/round_check_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:paddingHorizontal="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/floating_tray"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="?attr/colorOnBackground" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tap_the_bubble_to_open_recent_snippets_tray"
                        android:textColor="?attr/colorOnBackground"
                        android:alpha="0.7"
                        android:paddingTop="2dp" />
                </LinearLayout>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/floatingTraySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/suggestedActionsSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:paddingHorizontal="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suggested_actions"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="?attr/colorOnBackground" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_ai_or_regex_based_actions"
                        android:textColor="?attr/colorOnBackground"
                        android:alpha="0.7"
                        android:paddingTop="2dp" />
                </LinearLayout>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/suggestedActionsSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/autoCleanupSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auto_cleanup_snippets"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/round_chevron_right_24"
                    android:alpha="0.7"
                    app:tint="?attr/colorOnBackground" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cloudSyncSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cloud_sync"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvCloudSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/round_chevron_right_24"
                    android:alpha="0.7"
                    app:tint="?attr/colorOnBackground" />
            </LinearLayout>

            <TextView
                android:id="@+id/lastSyncedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/last_synced_never"
                android:textSize="14sp"
                android:textColor="?attr/colorOnBackground"
                android:alpha="0.7" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:trackThickness="6dp"
                android:visibility="gone"
                android:indeterminate="true"
                android:layout_marginBottom="4dp"
                app:waveAmplitude="4dp"
                app:wavelength="32dp"
                app:waveSpeed="0dp"/>

            <Button
                android:id="@+id/btnBackupNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:visibility="gone"
                android:text="@string/backup_now" />

            <LinearLayout
                android:id="@+id/scheduledTimeSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:paddingHorizontal="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scheduled_time"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="?attr/colorOnBackground" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_for_scheduled_backup_everyday"
                        android:textColor="?attr/colorOnBackground"
                        android:alpha="0.7"
                        android:paddingTop="2dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvScheduledTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/round_chevron_right_24"
                    android:alpha="0.7"
                    app:tint="?attr/colorOnBackground" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/appearanceSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/baseline_palette_24"
                    app:tint="?attr/colorOnBackground" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:text="@string/appearance"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvAppearanceMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/automatic"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/round_chevron_right_24"
                    android:alpha="0.7"
                    app:tint="?attr/colorOnBackground" />
            </LinearLayout>

            <Button
                android:id="@+id/btnClearClipBoard"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/clear_clipboard"
                android:backgroundTint="@color/md_theme_error"
                android:textColor="@color/md_theme_onPrimary" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>