<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="4dp"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/snippetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="8dp"
        android:textColor="?attr/colorOutline"
        android:textSize="12sp"
        android:text="@string/deleted"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/snippetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="16sp"
            android:maxLines="4"
            android:ellipsize="end" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:gravity="end">

                <Button
                    style="?attr/materialButtonOutlinedStyle"
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

                <Button
                    style="?attr/materialSplitButtonIconFilledStyle"
                    android:id="@+id/btnRestore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/restore" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
